# gba-test

./: Cargo.toml  README.md  build.rs  crt0.s  linker.ld  run.sh  thumbv4-none-agb.json  thumbv4t-nintendo-agb.json
src/: gfx.rs  heap.rs  main.rs  mem.rs
src/gfx/: draw.rs  mode5.rs  scene.rs
