[package]
name = "gba-test"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gba = { git = "https://github.com/rust-console/gba.git" }
vek = { version = "0.14", default-features = false, features = ["libm", "rgba"] }
bresenham = "0.1"
micromath = "1.1"
linked_list_allocator = { version = "0.8", default-features = false, features = ["const_mut_refs"] }

[profile.dev]
opt-level = 1
codegen-units = 1
lto = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
