[package]
name = "gba-test"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gba = { git = "https://github.com/rust-console/gba.git" }
gba = { path = "../gba" }
vek = { version = "0.14", default-features = false, features = ["libm", "rgb"] }
micromath = "1.1"
#fixed = { version = "1.6", features = ["num-traits"] }
fixed = { path = "../fixed", features = ["num-traits"] }
#fixed-sqrt = "0.2.4"
linked_list_allocator = { version = "0.8", default-features = false, features = ["const_mut_refs"] }
num-traits = { version = "0.2", default-features = false, features = ["i128"] }
wavefront = { version = "0.2.1", default-features = false }

[profile.dev]
debug = true
opt-level = 3
codegen-units = 1
lto = true

[profile.release]
debug = false
opt-level = 3
codegen-units = 1
lto = true
